updated to LTIM brand

--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -20,16 +20,24 @@ auth:
 
 catalog:
   rules:
-    - allow: [Component, System, API, Resource, Location]
+    - allow: [Component, System, API, Resource, Location, Template]
   locations:
     - type: url
       target: https://github.com/${GITHUB_ORG_ID}/backstage/blob/main/catalog-info.yaml
+    # - type: url
+    #   target: https://github.com/${GITHUB_ORG_ID}/backstage/blob/main/templates/node-service/template.yaml
+    #   rules:
+    #     - allow: [Template]
+    # - type: url
+    #   target: https://github.com/${GITHUB_ORG_ID}/backstage/blob/main/templates/podinfo-example/template.yaml
+    #   rules:
+    #     - allow: [Template]
     - type: url
-      target: https://github.com/${GITHUB_ORG_ID}/backstage/blob/main/templates/node-service/template.yaml
+      target: https://github.com/${GITHUB_ORG_ID}/backstage/blob/main/examples/python-fastapi-service-gcr-cloudsql/template.yaml
       rules:
         - allow: [Template]
     - type: url
-      target: https://github.com/${GITHUB_ORG_ID}/backstage/blob/main/templates/podinfo-example/template.yaml
+      target: https://github.com/${GITHUB_ORG_ID}/backstage/blob/main/examples/nextjs-website-azureappservice/template.yaml
       rules:
         - allow: [Template]
     - type: url
