--- a/examples/org.yaml
+++ b/examples/org.yaml
@@ -15,3 +15,18 @@ metadata:
 spec:
   type: team
   children: []
+---
+apiVersion: backstage.io/v1alpha1
+kind: User
+metadata:
+  name: de-ims
+spec:
+  memberOf: [de-ims]
+---
+apiVersion: backstage.io/v1alpha1
+kind: Group
+metadata:
+  name: de-ims
+spec:
+  type: poc-group
+  children: []
