Added github auth provider & removed guest provider

--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -13,10 +13,24 @@ backend:
       user: ${POSTGRES_USER}
       password: ${POSTGRES_PASSWORD}
 
+# auth:
+#   providers:
+#     guest:
+#       dangerouslyAllowOutsideDevelopment: true
 auth:
+  environment: production
   providers:
-    guest:
-      dangerouslyAllowOutsideDevelopment: true
+    github:
+      development:
+        clientId: ${AUTH_GITHUB_CLIENT_ID}
+        clientSecret: ${AUTH_GITHUB_CLIENT_SECRET}
+        ## uncomment if using GitHub Enterprise
+        # enterpriseInstanceUrl: ${AUTH_GITHUB_ENTERPRISE_INSTANCE_URL}
+        signIn:
+          resolvers:
+            # Matches the GitHub username with the Backstage user entity name.
+            # See https://backstage.io/docs/auth/github/provider#resolvers for more resolvers.
+            - resolver: usernameMatchingUserEntityName
 
 catalog:
   rules:
