--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -112,6 +112,13 @@ jobs:
       - name: Set Tag with SHA
         run: echo "TAG=`echo $GITHUB_SHA | cut -c 1-7`" >> $GITHUB_ENV
 
+      - name: Replace GitHub App authentication
+        run: |
+          sed -i 's/#AUTH_GITHUB_CLIENT_ID#/${{ secrets.AUTH_GITHUB_CLIENT_ID }}/g' app-config.yaml
+          sed -i 's/#AUTH_GITHUB_CLIENT_SECRET#/${{ secrets.AUTH_GITHUB_CLIENT_SECRET }}/g' app-config.yaml
+          sed -i 's/#AUTH_GITHUB_CLIENT_ID#/${{ secrets.AUTH_GITHUB_CLIENT_ID }}/g' app-config.production.yaml
+          sed -i 's/#AUTH_GITHUB_CLIENT_SECRET#/${{ secrets.AUTH_GITHUB_CLIENT_SECRET }}/g' app-config.production.yaml
+
       - run: mkdir credentials && touch credentials/github-app-backstage-humanitec-credentials.yaml
       - run: docker image build -t backstage .
 
