--- a/app-config.yaml
+++ b/app-config.yaml
@@ -42,8 +42,8 @@ auth:
   providers:
     github:
       development:
-        clientId: ${AUTH_GITHUB_CLIENT_ID}
-        clientSecret: ${AUTH_GITHUB_CLIENT_SECRET}
+        clientId: #AUTH_GITHUB_CLIENT_ID#
+        clientSecret: #AUTH_GITHUB_CLIENT_SECRET#
         ## uncomment if using GitHub Enterprise
         # enterpriseInstanceUrl: ${AUTH_GITHUB_ENTERPRISE_INSTANCE_URL}
         signIn:
