--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -22,8 +22,8 @@ auth:
   providers:
     github:
       development:
-        clientId: #AUTH_GITHUB_CLIENT_ID#
-        clientSecret: #AUTH_GITHUB_CLIENT_SECRET#
+        clientId: "#AUTH_GITHUB_CLIENT_ID#"
+        clientSecret: "#AUTH_GITHUB_CLIENT_SECRET#"
         ## uncomment if using GitHub Enterprise
         # enterpriseInstanceUrl: ${AUTH_GITHUB_ENTERPRISE_INSTANCE_URL}
         signIn:
