--- a/app-config.yaml
+++ b/app-config.yaml
@@ -38,7 +38,7 @@ techdocs:
 #   providers:
 #     guest: {}
 auth:
-  environment: production
+  # environment: production
   providers:
     github:
       development:
@@ -51,6 +51,8 @@ auth:
             # Matches the GitHub username with the Backstage user entity name.
             # See https://backstage.io/docs/auth/github/provider#resolvers for more resolvers.
             - resolver: usernameMatchingUserEntityName
+    guest: {}
+    
 
 scaffolder:
 
