--- a/examples/org.yaml
+++ b/examples/org.yaml
@@ -30,3 +30,17 @@ metadata:
 spec:
   type: poc-group
   children: []
+---
+apiVersion: backstage.io/v1alpha1
+kind: User
+metadata:
+  name: jinaldesailive
+spec:
+  memberOf: [de-ims]
+---
+apiVersion: backstage.io/v1alpha1
+kind: User
+metadata:
+  name: sudhanshu-abhi-2
+spec:
+  memberOf: [de-ims]
