--- a/examples/org.yaml
+++ b/examples/org.yaml
@@ -44,3 +44,10 @@ metadata:
   name: sudhanshu-abhi-2
 spec:
   memberOf: [de-ims]
+---
+apiVersion: backstage.io/v1alpha1
+kind: User
+metadata:
+  name: jintov
+spec:
+  memberOf: [de-ims]
