--- a/app-config.yaml
+++ b/app-config.yaml
@@ -31,6 +31,9 @@ proxy:
     allowedMethods: ['GET']
     auth: "#SONARCLOUD_TOKEN#"
 
+sonarQube:
+  baseUrl: https://sonarqube-so2knvar.mindtree.opsera.io
+
 techdocs:
   builder: 'local'
   generator:
