--- a/app-config.yaml
+++ b/app-config.yaml
@@ -28,6 +28,7 @@ integrations:
 proxy:
 
 sonarqube:
+  name: ltimindtreeSonarqube
   baseUrl: https://sonarqube-so2knvar.mindtree.opsera.io
   apiKey: #SONARCLOUD_TOKEN#
 
